[package]
name = "divine-router"
version = "0.1.0"
edition = "2021"
authors = ["Divine Video"]
description = "Fastly edge router for divine.video subdomains"

[dependencies]
fastly = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
